RESOLVED FIXED244487
[LBSE] Text rendering is not pixel perfect
https://bugs.webkit.org/show_bug.cgi?id=244487
Summary [LBSE] Text rendering is not pixel perfect
Nikolas Zimmermann
Reported 2022-08-29 02:02:28 PDT
The screen scaling factor for font sizes (see RenderSVGInlineText::computeNewScaledFont) evaluates to 1.0 in LBSE. Therefore the legacy engine / LBSE produce different visual text rendering results at present (glyphs are scaled, not the font itself). Fix that to achieve pixel perfect rendering results between LBSE / legacy engine.
Attachments
Nikolas Zimmermann
Comment 1 2022-08-29 02:21:49 PDT
EWS
Comment 2 2022-08-30 05:06:50 PDT
Committed 253938@main (e3e969227c9e): <https://commits.webkit.org/253938@main> Reviewed commits have been landed. Closing PR #3765 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2022-08-30 05:07:18 PDT
Note You need to log in before you can comment on or make changes to this bug.